--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
+server.port=2020
